--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="favicon.ico">
-  <title>Stars App</title>
+  <title>Cereal App</title>
 </head>
 
 <body>
   <header>
-    <h1>Stars App (Finished)</h1>
+    <h1>Cereal App</h1>
   </header>
 
   <div id="root"></div>
